

@startuml **Diagrama de Clase de Registrar Cliente**


' Cliente (Modelo/Entidad)
class Cliente {
    - Long id
    - String nombre
    - String email
}

' ClienteRepository (Solo métodos de persistencia relevantes)
class ClienteRepository << (R,darkgreen) Repository >> {
    + Cliente save(Cliente cliente)
    + Optional<Cliente> findByEmail(String email)
}

' ClienteService (Solo métodos de negocio relevantes)
class ClienteService << (S,red) Service >> {
    - ClienteRepository clienteRepository
    --
    + Cliente registrarNuevoCliente(Cliente datosCliente)
    + Boolean esEmailUnico(String email)
}

' ClienteController (Solo métodos de API relevantes)
class ClienteController << (C,blue) Controller >> {
    - ClienteService clienteService
    --
    + ResponseEntity<Cliente> POST /api/clientes (ClienteRequest request)
}

' Definición de las dependencias
ClienteController o-- ClienteService : utiliza >
ClienteService o-- ClienteRepository : utiliza >
ClienteService ..> Cliente : manipula/retorna
ClienteRepository ..> Cliente : persiste
@enduml